# futures-ocl

./: Cargo.toml
examples/: fromdoc.rs  test.rs
examples/event_sizes/: Cargo.toml
examples/event_sizes/src/: main.rs
src/: async_process_proto.rs  device_check.rs  dinglehopper.rs  main.rs  main_orig.rs  switches.rs
src/extras/: buffer_pool.rs
src/extras_proto/: mod.rs
