[package]
name = "futures-ocl"
version = "0.1.0"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]

[replace]
# "ocl-core:0.3.2" = { git = "https://github.com/cogciprocate/ocl-core" }
"ocl-core:0.3.2" = { path = "/home/nick/src/github.com/cogciprocate/ocl-core" }

[dependencies]
ocl = { path = "/home/nick/projects/ocl" }
# ocl = { path = "/home/nick/projects/ocl", features = ["disable_event_callbacks"] }

# ocl-core = "0.3"
# ocl-core = { path = "/home/nick/src/github.com/cogciprocate/ocl-core", features = ["disable_event_callbacks"] }
# ocl-core = { path = "/home/nick/src/github.com/cogciprocate/ocl-core" }

futures = "0.1"
futures-cpupool = "0.1"
tokio-timer = { git = "https://github.com/tokio-rs/tokio-timer" }
rand = "0.3"
chrono = "0.2"



