[package]
name = "event_sizes"
version = "0.1.0"
authors = ["Nick Sanders <cogciprocate@gmail.com>"]

[dependencies]
# ocl = { path = "/home/nick/src/github.com/cogciprocate/ocl", features = ["finish_queue_on_map_writes"] }
# ocl = { path = "/home/nick/src/github.com/cogciprocate/ocl", features = ["disable_event_callbacks"] }
ocl = { path = "/home/nick/src/github.com/cogciprocate/ocl" }

# ocl-core = "0.3"
# ocl-core = { path = "/home/nick/src/github.com/cogciprocate/ocl-core", features = ["disable_event_callbacks"] }
cl-sys = { path = "/home/nick/src/github.com/cogciprocate/cl-sys" }
ocl-core = { path = "/home/nick/src/github.com/cogciprocate/ocl-core" }


[replace]
# "ocl-core:0.3.2" = { git = "https://github.com/cogciprocate/ocl-core" }

"cl-sys:0.2.1" = { path = "/home/nick/src/github.com/cogciprocate/cl-sys" }
"ocl-core:0.3.2" = { path = "/home/nick/src/github.com/cogciprocate/ocl-core" }
